--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    
+    <!--head section-->
+    <header class="header">
+
+    </header>
+
+
+    <!-- end of head section-->
 
 </body>
 
