work select section

--- a/index.html
+++ b/index.html
@@ -12,11 +12,54 @@
 <body>
     <!--head section-->
     <header class="header">
+        <!--haed balck-->
+        <div class="navbar">
+            <div class="nav-section">
+                <ul class="nav-section">
+                    <li class="nav-section__link"><a href="#" class="link-nav">Best Sellers</a></li>
+                    <li class="nav-section__link"><a href="#" class="link-nav">Gift Ideas</a></li>
+                    <li class="nav-section__link"><a href="#" class="link-nav">New Releases</a></li>
+                    <li class="nav-section__link"><a href="#" class="link-nav">Today's Deals</a></li>
+                    <li class="nav-section__link"><a href="#" class="link-nav">Customer Service</a></li>
+                </ul>
+            </div>
+        </div>
+        <!--haed balck-->
+        <!--title-->
+        <div class="title-site">
+            <img src="./image/logo.png" alt="" class="title-site__img">
+        </div>
+        <!--end title-->
+        <!--input section-->
+        <div>
+            <!--select section-->
+            <div>
+                <select aria-valuetext="All">
+                    <option value="All Category">All Category</option>
+                    <option value="Action">Action</option>
+                    <option value="Another Action">Another Action</option>
+                    <option value="someting else here">someting else here</option>
+                </select>
+            </div>
+            <!--end select section-->
+            <!--input section-->
+            <div>
+                <input type="text">
+            </div>
+            <!--end input section-->
+
+        </div>
+
+
+
 
     </header>
 
 
     <!-- end of head section-->
+
+
+
 
 </body>
 
