--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </div>
         <!--end title-->
         <!--input section-->
-        <div>
+        <div class="container-head">
             <!--select section-->
-            <div>
-                <select aria-valuetext="All">
+            <div class="select">
+                <select aria-valuetext="All" class="select__sel">
                     <option value="All Category">All Category</option>
                     <option value="Action">Action</option>
                     <option value="Another Action">Another Action</option>
@@ -43,12 +43,25 @@
             </div>
             <!--end select section-->
             <!--input section-->
-            <div>
-                <input type="text">
+            <div class="input">
+                <input type="text" class="input__inp" value="Search this blog ">
+                <input type="text" class="input__inp--black">
             </div>
             <!--end input section-->
+            <!--button section-->
+            <div class="button">
+                <button class="button__btn">
+                    <img src="./image/flag-uk.png" alt="">
+                    <a href="#" class="button__link">English</a>
+                </button>
+            </div>
+            <!--end button section-->
+            <!--big title -->
+            <!-- end big title -->
+
 
         </div>
+        <!--end container-->
 
 
 
