start body section

--- a/index.html
+++ b/index.html
@@ -56,20 +56,34 @@
                 </button>
             </div>
             <!--end button section-->
-            <!--big title -->
-            <!-- end big title -->
-
-
         </div>
         <!--end container-->
-
-
-
-
+        <!--big title -->
+        <div class="center-title">
+            <h1 class="center-title__text"> GET START<br>
+                YOUR FAVRIOT SHOPING</h1>
+        </div>
+        <!-- end big title -->
+        <!--last button in haed section-->
+        <div class="button--black">
+            <button class="button--black__btn"><a href="#" class="button--black__link">BOY NOW</a></button>
+        </div>
+        <!-- end last button in haed section-->
     </header>
-
-
     <!-- end of head section-->
+
+    <main>
+        <!--title big body-->
+        <div class="body-title">
+            <h1 class="body-title__text">Man & Woman Fashion</h1>
+        </div>
+        <!-- end title big body-->
+        <div>
+            
+        </div>
+
+
+    </main>
 
 
 
