start cart secion

--- a/index.html
+++ b/index.html
@@ -78,8 +78,63 @@
             <h1 class="body-title__text">Man & Woman Fashion</h1>
         </div>
         <!-- end title big body-->
-        <div>
-            
+        <div class="cart-content">
+            <!--cart container-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Man T -shirt</p>
+                    <p class="para-pri">Price $ 30</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/tshirt-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+            <!--two-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Man -shirt</p>
+                    <p class="para-pri">Price $ 30</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/dress-shirt-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+            <!--three-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Woman Scart</p>
+                    <p class="para-pri">Price $ 40</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/women-clothes-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+
+
+
+
+            <!-- end cart container-->
         </div>
 
 
