work section three cart

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <main>
         <!--title big body-->
         <div class="body-title">
-            <h1 class="body-title__text">Man & Woman Fashion</h1>
+            <p class="body-title__text">Man & Woman Fashion</p>
         </div>
         <!-- end title big body-->
         <div class="cart-content">
@@ -130,13 +130,153 @@
 
                 </div>
             </div>
-
-
-
-
             <!-- end cart container-->
         </div>
+        <!--squere-->
+        <div class="squre">
+            <div class="first-squre">
+            </div>
+            <div class="first-squre">
+            </div>
+        </div>
+        <!--end of squre-->
+        <div class="Electronic-title">
+            <p class="Electronic-title__text">Electronic</p>
+        </div>
+        <!--cart secction two-->
+        <div class="cart-content">
+            <!--cart container-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Laptop</p>
+                    <p class="para-pri"> Start Price $ 100</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/laptop-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
 
+                </div>
+            </div>
+            <!--two-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Mobile</p>
+                    <p class="para-pri"> Start Price $ 150</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/mobile-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+            <!--three-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Computer</p>
+                    <p class="para-pri"> Start Price $ 200</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/computer-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+            <!-- end cart container-->
+        </div>
+        <!--end of cart section two-->
+        <!--squere-->
+        <div class="squre">
+            <div class="first-squre">
+            </div>
+            <div class="first-squre">
+            </div>
+        </div>
+        <!--end of squre-->
+        <!--cart section four -->
+
+        <div class="Electronic-title">
+            <p class="Electronic-title__text">Jewellery Accessories</p>
+        </div>
+        <!--cart secction two-->
+        <div class="cart-content">
+            <!--cart container-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Jumkas</p>
+                    <p class="para-pri"> Start Price $ 100</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/jhumka-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+            <!--two-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Necklaces</p>
+                    <p class="para-pri"> Start Price $ 150</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/neklesh-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+            <!--three-->
+            <div class="frist-cart">
+                <div class="cart-text">
+                    <p class="para">Kangans</p>
+                    <p class="para-pri"> Start Price $ 200</p>
+                </div>
+                <!--imag-->
+                <div class="cart-img">
+                    <img src="./image/kangan-img.png" alt="">
+                </div>
+                <!--end img-->
+                <div class="buy">
+                    <span class="buy__text-one">BUY NOW</span>
+                    <span class=" buy__text-two">See More</span>
+
+                </div>
+            </div>
+            <!-- end cart container-->
+        </div>
+        <!--end cart section four-->
+        <!--squere-->
+        <div class="squre">
+            <div class="first-squre">
+            </div>
+            <div class="first-squre">
+            </div>
+        </div>
+        <!--end of squre-->
+        <!--cricle section-->
 
     </main>
 
