work on reponsive section

--- a/index.html
+++ b/index.html
@@ -277,9 +277,55 @@
         </div>
         <!--end of squre-->
         <!--cricle section-->
+        <div class="animation">
+            <div class="animat">
+            </div>
+        </div>
+        <!--cricle section-->
 
     </main>
 
+    <footer class="footer">
+        <div>
+            <!--container footer-->
+            <div class="footer-title">
+                <img src="./image/logo.png" alt="">
+            </div>
+            <div class="email">
+                <span class="email__text">Your Email</span>
+                <span class="email__textone">SUBSCRIBE</span>
+            </div>
+            <div class="line">
+                <hr>
+            </div>
+            <!--navbar section -->
+            <div class="navbar">
+                <div class="nav-section">
+                    <ul class="nav-section">
+                        <li class="nav-section__link"><a href="#" class="link-nav">Best Sellers</a></li>
+                        <li class="nav-section__link"><a href="#" class="link-nav">Gift Ideas</a></li>
+                        <li class="nav-section__link"><a href="#" class="link-nav">New Releases</a></li>
+                        <li class="nav-section__link"><a href="#" class="link-nav">Today's Deals</a></li>
+                        <li class="nav-section__link"><a href="#" class="link-nav">Customer Service</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!--end navbar-->
+            <!--footer phone-->
+            <div class="phone-footer">
+                <span>Help Line Number :</span>
+                <span>+1 1800 1200 1200</span>
+
+            </div>
+            <!--end of footer phone-->
+            <div class="massage-footer">
+                <span class="massage-footer__mass">
+                    Design by Masoumeh Rezai
+                </span>
+            </div>
+            <!-- end of container footer-->
+        </div>
+    </footer>
 
 
 
