--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="button--black">
             <button class="button--black__btn" onclick="button()"><a href="#" class="button--black__link" onclick="myFunction(this, 'red')">BOY
                     NOW</a></button>
-            <script src="./app.js"></script>
+            <script src="./js/app.js"></script>
         </div>
         <!-- end last button in haed section-->
     </header>
