--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="button">
                 <button class="button__btn">
                     <img src="./image/flag-uk.png" alt="">
-                    <a href="#" class="button__link" id = "link" onclick="country()">English</a>
+                    <a href="#" class="button__link" id="link" onclick="country()">English</a>
                 </button>
             </div>
             <!--end button section-->
@@ -60,7 +60,7 @@
         <!--end container-->
         <!--big title -->
         <div class="center-title">
-            <h1 class="center-title__text"> GET START<br>
+            <h1 class="center-title__text" id="title" onclick="head_title(this, '#f26522')"> GET START<br>
                 YOUR FAVRIOT SHOPING</h1>
         </div>
         <!-- end big title -->
@@ -73,7 +73,6 @@
         <!-- end last button in haed section-->
     </header>
     <!-- end of head section-->
-
     <main>
         <!--title big body-->
         <div class="body-title">
